[build-system]
requires = ["setuptools>=61.0", "wheel", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = "prompthub"
version = "1.0.0"
description = "Python terminal helper with colored messages, CLI commands, and utilities"
requires-python = ">=3.8"
authors = [
  { name="Nathan", email="gutz85@gmail.com" }
]
dependencies = ["colorama>=0.4.6"]
readme = "README.md"
